--- a/style.css
+++ b/style.css
@@ -1,6 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&family=Roboto+Slab:wght@400;800&display=swap');
 
+
+:root {
+    --primary-color: #7c3aed;
+}
+
 body{
     font-family: 'Hedvig Letters Serif', serif;
 font-family: 'Roboto Slab', serif
 }
+
+/**container **/
+.container {
+   padding: 0rem 1rem;
+}
+.container-center {
+    max-width: 600px;
+    margin: auto;
+}
+
+/** links **/
+.link {
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+
+}
+
+.link-primary {
+    background-color:var
+    (--primary-color);
+    border-radius: 0.5rem;
+    color:white
+}
+
+.link-secondary{
+    color: var(--primary-color);
+    border-radius:0.5rem;
+    border: 1px solid var 
+    (--primary-color);
+
+}
+
+/** look into BEM naming convention for css **/
