--- a/style.css
+++ b/style.css
@@ -42,3 +42,24 @@ font-family: 'Roboto Slab', serif
 }
 
 /** look into BEM naming convention for css **/
+
+/**header**/
+.hero {
+    padding: 2rem;
+}
+.hero .hero-img{
+    max-width: 350px;
+    display: block;
+    margin:auto;
+}
+.hero .hero-heading {
+    color: var(--primary-color)
+}
+
+/** section**/
+.section h3{
+    text-align: center;
+}
+.ow {
+    color: var(--white);
+}
